network.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gemma-server-gateway
  namespace: gemma-server
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gemma-server-route
  namespace: gemma-server
  labels:
    gateway: gemma-server-gateway
spec:
  parentRefs:
  - kind: Gateway
    name: gemma-server-gateway
  rules:
  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: gemma-server-service
      port: 8000
